--- a/index.html
+++ b/index.html
@@ -2369,79 +2369,79 @@
 
 
     <script>
-            window.matl1 = function () {
-                var knot = document.getElementById("prt1");
-                knot.setAttribute('material', 'src', '#m01');
-            }
-            window.matl2 = function () {
-                var knot = document.getElementById("prt2");
-                knot.setAttribute('material', 'src', '#m02');
-            }
-            window.matl3 = function () {
-                var knot = document.getElementById("prt3");
-                knot.setAttribute('material', 'src', '#m03');
-            }
-            window.matl4 = function () {
-                var knot = document.getElementById("prt4");
-                knot.setAttribute('material', 'src', '#m04');
-            }
-            window.matl5 = function () {
-                var knot = document.getElementById("prt5");
-                knot.setAttribute('material', 'src', '#m05');
-            }
-            window.matl6 = function () {
-                var knot = document.getElementById("prt6");
-                knot.setAttribute('material', 'src', '#m06');
-            }
-            window.matl7 = function () {
-                var knot = document.getElementById("prt7");
-                knot.setAttribute('material', 'src', '#m07');
-            }
-            window.matl8 = function () {
-                var knot = document.getElementById("prt8");
-                knot.setAttribute('material', 'src', '#m08');
-            }
-            window.matl9 = function () {
-                var knot = document.getElementById("prt9");
-                knot.setAttribute('material', 'src', '#m09');
-            }
-            window.matl10 = function () {
-                var knot = document.getElementById("prt10");
-                knot.setAttribute('material', 'src', '#m10');
-            }
-            window.matl11 = function () {
-                var knot = document.getElementById("prt11");
-                knot.setAttribute('material', 'src', '#m11');
-            }
-            window.matl12 = function () {
-                var knot = document.getElementById("prt12");
-                knot.setAttribute('material', 'src', '#m12');
-            }
-            window.matl13 = function () {
-                var knot = document.getElementById("prt13");
-                knot.setAttribute('material', 'src', '#m13');
-            }
-            window.matl14 = function () {
-                var knot = document.getElementById("prt14");
-                knot.setAttribute('material', 'src', '#m14');
-            }
-            window.matl15 = function () {
-                var knot = document.getElementById("prt15");
-                knot.setAttribute('material', 'src', '#m15');
-            }
-            window.matl16 = function () {
-                var knot = document.getElementById("prt16");
-                knot.setAttribute('material', 'src', '#m16');
-            }
-            window.matl17 = function () {
-                var knot = document.getElementById("prt17");
-                knot.setAttribute('material', 'src', '#m17');
-            }
-            window.matl18 = function () {
-                var knot = document.getElementById("prt18");
-                knot.setAttribute('material', 'src', '#m18');
-            };
-    </script>
+        function matl01() {
+            var knot = document.getElementById("prt1");
+            knot.setAttribute('material', 'src', '#m01');
+        }
+        function matl02() {
+            var knot = document.getElementById("prt2");
+            knot.setAttribute('material', 'src', '#m02');
+        }
+        function matl03() {
+            var knot = document.getElementBySelection("cursor");
+            knot.setAttribute('material', 'src', '#m03');
+        }
+        window.matl4 = function () {
+            var knot = document.getElementById("prt4");
+            knot.setAttribute('material', 'src', '#m04');
+        }
+        window.matl5 = function () {
+            var knot = document.getElementById("prt5");
+            knot.setAttribute('material', 'src', '#m05');
+        }
+        window.matl6 = function () {
+            var knot = document.getElementById("prt6");
+            knot.setAttribute('material', 'src', '#m06');
+        }
+        window.matl7 = function () {
+            var knot = document.getElementById("prt7");
+            knot.setAttribute('material', 'src', '#m07');
+        }
+        window.matl8 = function () {
+            var knot = document.getElementById("prt8");
+            knot.setAttribute('material', 'src', '#m08');
+        }
+        window.matl9 = function () {
+            var knot = document.getElementById("prt9");
+            knot.setAttribute('material', 'src', '#m09');
+        }
+        window.matl10 = function () {
+            var knot = document.getElementById("prt10");
+            knot.setAttribute('material', 'src', '#m10');
+        }
+        window.matl11 = function () {
+            var knot = document.getElementById("prt11");
+            knot.setAttribute('material', 'src', '#m11');
+        }
+        window.matl12 = function () {
+            var knot = document.getElementById("prt12");
+            knot.setAttribute('material', 'src', '#m12');
+        }
+        window.matl13 = function () {
+            var knot = document.getElementById("prt13");
+            knot.setAttribute('material', 'src', '#m13');
+        }
+        window.matl14 = function () {
+            var knot = document.getElementById("prt14");
+            knot.setAttribute('material', 'src', '#m14');
+        }
+        window.matl15 = function () {
+            var knot = document.getElementById("prt15");
+            knot.setAttribute('material', 'src', '#m15');
+        }
+        window.matl16 = function () {
+            var knot = document.getElementById("prt16");
+            knot.setAttribute('material', 'src', '#m16');
+        }
+        window.matl17 = function () {
+            var knot = document.getElementById("prt17");
+            knot.setAttribute('material', 'src', '#m17');
+        }
+        window.matl18 = function () {
+            var knot = document.getElementById("prt18");
+            knot.setAttribute('material', 'src', '#m18');
+        };
+</script>
 
 
 
