--- a/index.html
+++ b/index.html
@@ -315,13 +315,13 @@
         </center>
         <center>
             <h4>GETTING STARTED : MODEL ASSEMBLY</h4>
-            <h4></h4>
-            <h4></h4>
-            <h4></h4>
-            <h4></h4>
-            <h4></h4>
-            <h4></h4>
-            <h4></h4>
+            <h4>EVERY ASSEMBLY IN CADBOXX HAS AN ANCHOR PART.</h4>
+            <h4>THE ANCHOR IS THE CHASSIS OF THE ASSEMBLY.</h4>
+            <h4>ALL OTHER PARTS ARE CHILDREN OF THE ANCHOR.</h4>
+            <h4>THEY ARE FIXED TO IT OR CONNECTED BY MOVING JOINTS.</h4>
+            <h4>POSITION CONNECTOR PLANES AT THE JOINT LOCATIONS.</h4>
+            <h4>THEN ASSEMBLE THE PART BASE-PLANE WITH THESE PLANES.</h4>
+            <h4>SET THE MOVEMENT CONSTRAINTS BETWEEN THE TWO PLANES.</h4>
         </center>
         </div>
     </div>
@@ -339,14 +339,14 @@
             </div>
         </center>
         <center>
-            <h4>POSITION AND CONSTRAIN</h4>
+            <h4>POSITION AND CONSTRAINING</h4>
             <h4>IF YOUR JOINT IS THE SAME AS ONE OF OUR TEMPLATES </h4>
             <h4>THEN WE RECCOMEND USING A TEMPLATE.</h4>
-            <h4></h4>
-            <h4></h4>
-            <h4></h4>
-            <h4></h4>
-            <h4></h4>
+            <h4>SIMPLY OVER-WRITE THE URL OF THE PLANE WITH THE TEMPLATE URL.</h4>
+            <h4>SET THE BODY NAMES TO SUIT THE CONSTRAINT MIXINS.</h4>
+            <h4>WHEN ALL THE JOINTS AND PARTS ARE IN PLACE HIT CTRL-ALT-I</h4>
+            <h4>STUDY THE MOTION OF THE ASSEMBLY AND ADJUST JOINT PROPERTIES.</h4>
+            <h4>EXPORT THE ASSEMBLY AS A GLB FILE.</h4>
             <h4></h4>
         </center>
         </div>        
@@ -365,12 +365,12 @@
             </div>
         </center>
         <center>
-            <h4>POP AND ROLL</h4>
-            <h4>IF YOUR JOINT IS THE SAME AS ONE OF OUR TEMPLATES </h4>
-            <h4>THEN WE RECCOMEND USING A TEMPLATE.</h4>
-            <h4></h4>
-            <h4></h4>
-            <h4></h4>
+            <h4>ANIMATE AND SIMULATE</h4>
+            <h4>YOUR SCENE IS NOW LIVE AND THE USER CAN INTERACT WITH THE MODELS.</h4>
+            <h4>PUSH, PULL, KICK AND THROW YOUR COMPONENTS LIKE YOU WOULD IN REALITY.</h4>
+            <h4>TEST THE MOTION AND PERFORMANCEOF YOUR ASSEMBLY LIVE ON SCREEN.</h4>
+            <h4>ADJUST THE STIFFNESS AND DAMPING OF THE JOINTS TO OPTIMIZE.</h4>
+            <h4>RECORD VIDEOS OF THE ASSEMBLY AS IT MOVES IN VIRTUAL REALITY.</h4>
             <h4></h4>
             <h4></h4>
             <h4></h4>
@@ -391,9 +391,9 @@
             </div>
         </center>
         <center>
-            <h4>ROLL AND POP</h4>
-            <h4></h4>
-            <h4>THEN WE RECCOMEND USING A TEMPLATE.</h4>
+            <h4>EXPORT YOUR MODELS</h4>
+            <h4>EXPORT THE MODEL ASSEMBLY IN DIFFERENT SNAPSHOT POSITION</h4>
+            <h4>CREATE SNAPSHOTS OF THE MOVING ASSEMBLY IN DIFFERENT POSITIOINS.</h4>
             <h4></h4>
             <h4></h4>
             <h4></h4>
