--- a/index.html
+++ b/index.html
@@ -393,10 +393,10 @@
         <center>
             <h4>EXPORT YOUR MODELS</h4>
             <h4>EXPORT THE MODEL ASSEMBLY IN DIFFERENT SNAPSHOT POSITION</h4>
-            <h4>CREATE SNAPSHOTS OF THE MOVING ASSEMBLY IN DIFFERENT POSITIOINS.</h4>
-            <h4></h4>
-            <h4></h4>
-            <h4></h4>
+            <h4>CREATE SNAPSHOTS OF THE MOVING ASSEMBLY IN DIFFERENT POSITIONS.</h4>
+            <h4>RUN ANIMATIONS TOGETHER WITH PHYSICS SIMULATIONS.</h4>
+            <h4>OBSERVE PARTS COLLIDING AS THEY WOULD NORMALLY.</h4>
+            <h4>ADJUST THE DESIGN TO CHANGE PERFORMSNCE.</h4>
             <h4></h4>
             <h4></h4>
             <h4></h4>
