--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <h4>USE THE GEOMETRY PULL-DOMN TO PLACE PRIMITIVE SHAPES</h4>
             <h4>SELECT THE SHAPE TO MODIFY AND SET POSITION, ROTATION AND SCALE.</h4>
             <h4>ADD OTHER SHAPES TO CREATE THE DESIRED COMPONENT BODY.</h4>
-            <h4>ADD TEXTURES TO THE INDIVIDUAL BODIES AS REQUIRED.K</h4>
+            <h4>ADD TEXTURES TO THE INDIVIDUAL BODIES AS REQUIRED.</h4>
             <h4>ADD ANCHOR PLANE AND CONNECTOR PLANE(S).</h4>
             <h4></h4>
             <h4></h4>
@@ -396,7 +396,7 @@
             <h4>CREATE SNAPSHOTS OF THE MOVING ASSEMBLY IN DIFFERENT POSITIONS.</h4>
             <h4>RUN ANIMATIONS TOGETHER WITH PHYSICS SIMULATIONS.</h4>
             <h4>OBSERVE PARTS COLLIDING AS THEY WOULD NORMALLY.</h4>
-            <h4>ADJUST THE DESIGN TO CHANGE PERFORMSNCE.</h4>
+            <h4>ADJUST THE DESIGN TO CHANGE PERFORMANCE.</h4>
             <h4></h4>
             <h4></h4>
             <h4></h4>
@@ -1195,7 +1195,10 @@
 
             <a-entity id="gg1" gltf-model="#cadboxx-floor" position="0 0 0" rotation="0 0 0" static-body visible="false"></a-entity>
             <a-entity id="gg2" gltf-model="#floor-t" position="0 0 0" rotation="0 0 0" static-body visible="true"></a-entity>
-
+            <a-box position="0 0 0" rotation="0 0 0" width="1" depth="1" height="1" src="#m01" static-body></a-box>
+            <a-box position="0 2 0" rotation="0 0 0" width="1" depth="1" height="1" src="#m05" static-body></a-box>
+            <a-box position="0 4 0" rotation="0 0 0" width="1" depth="1" height="1" src="#m10" static-body></a-box>
+                          
 
             <!--templates-->
             <!--crankshaft
