--- a/index.html
+++ b/index.html
@@ -2226,28 +2226,28 @@
                     linearDamping: 0.005
                 });
             };
-            function cmmd1() {//
+            function newglbcube() {//
 
             };
-            function cmmd2() {//
+            function newglbsphere() {//
 
             };
-            function cmmd3() {//
+            function newglbconetf() {//
 
             };
-            function cmmd4() {//
+            function newglbconetp() {//
 
             };
-            function cmmd5() {//
+            function newglbcyl() {//
 
             };
-            function cmmd6() {//
+            function newglbtube() {//
 
             };
-            function cmmd7() {//
+            function newglbplane() {//
 
             };
-            function cmmd8() {//
+            function newjoint1() {//
 
             };
             function cmmd9() {//
