--- a/index.html
+++ b/index.html
@@ -1264,19 +1264,19 @@
                       intersection-spawn="event: click; mixin: voxelcb1"></a-entity>
 
             <a-light type="point" color="#94c6ff" position="0 0 0" intensity="1" light="intensity: 2" visible="true"></a-light>
-            <a-light type="directional" directionaltarget="0 0 0" color="#94c6ff" position="-16 16 16" intensity="1"></a-light>
-            <a-light type="directional" directionalTarget="0 0 0" color="#94c6ff" position="-16 -16 16" intensity="1"></a-light>
-            <a-light type="directional" directionalTarget="0 0 0" color="#94c6ff" position="16 -16 -16" intensity="1"></a-light>
-            <a-light type="directional" directionalTarget="0 0 0" color="#94c6ff" position="-16 16 16" intensity="1"></a-light>
-            <a-light type="directional" directionalTarget="0 0 0" color="#94c6ff" position="-16 -16 -16" intensity="1"></a-light>
-            <a-light type="directional" directionalTarget="0 0 0" color="#94c6ff" position="16 16 16" intensity="1"></a-light>
+            <a-light type="directional" directionaltarget="0 0 0" color="#94c6ff" position="-16 16 16" intensity=".51"></a-light>
+            <a-light type="directional" directionalTarget="0 0 0" color="#94c6ff" position="-16 -16 16" intensity=".5"></a-light>
+            <a-light type="directional" directionalTarget="0 0 0" color="#94c6ff" position="16 -16 -16" intensity=".5"></a-light>
+            <a-light type="directional" directionalTarget="0 0 0" color="#94c6ff" position="-16 16 16" intensity=".5"></a-light>
+            <a-light type="directional" directionalTarget="0 0 0" color="#94c6ff" position="-16 -16 -16" intensity=".5"></a-light>
+            <a-light type="directional" directionalTarget="0 0 0" color="#94c6ff" position="16 16 16" intensity=".5"></a-light>
 
-            <a-light type="spot" color="#94c6ff" position="0 16 16" intensity="1"></a-light>
-            <a-light type="spot" color="#94c6ff" position="0 16 -16" intensity="1"></a-light>
-            <a-light type="spot" color="#94c6ff" position="16 16 16" intensity="1"></a-light>
-            <a-light type="spot" color="#94c6ff" position="-16 16 16" intensity="1"></a-light>
-            <a-light type="spot" color="#94c6ff" position="16 -16 16" intensity="1"></a-light>
-            <a-light type="spot" color="#94c6ff" position="16 0 16" intensity="1"></a-light>
+            <a-light type="spot" color="#94c6ff" position="0 16 16" intensity=".5"></a-light>
+            <a-light type="spot" color="#94c6ff" position="0 16 -16" intensity=".5"></a-light>
+            <a-light type="spot" color="#94c6ff" position="16 16 16" intensity=".5"></a-light>
+            <a-light type="spot" color="#94c6ff" position="-16 16 16" intensity=".5"></a-light>
+            <a-light type="spot" color="#94c6ff" position="16 -16 16" intensity=".5"></a-light>
+            <a-light type="spot" color="#94c6ff" position="16 0 16" intensity=".5"></a-light>
 
             <!--cameras-->
             <!--camera1 general cam for INTERACTION AND MENU SELECTION -->
