--- a/ground-up.html
+++ b/ground-up.html
@@ -394,7 +394,7 @@
         <center>
             <h4>ROLL AND POP</h4>
             <h4></h4>
-            <h4>THEN WE RECCOMEND USING A TEMPLATE.</h4>
+            <h4></h4>
             <h4></h4>
             <h4></h4>
             <h4></h4>
@@ -1093,7 +1093,7 @@
                 <a-asset-item id="onebox" src="https://cdn.glitch.global/2a3af8bb-e7b2-4e50-8ce2-68e3e8cf4538/onebox.glb?v=1655710263791"></a-asset-item>
                 <a-asset-item id="redspring" src="https://cdn.glitch.global/2a3af8bb-e7b2-4e50-8ce2-68e3e8cf4538/springred.glb?v=1680272516428"></a-asset-item>
                 <a-asset-item id="glbplate" src="https://cdn.glitch.global/2a3af8bb-e7b2-4e50-8ce2-68e3e8cf4538/glbplate.glb?v=1679513082607"></a-asset-item>
-                <a-asset-item id="glbplate2" src="#"></a-asset-item>
+                <a-asset-item id="glbplate2" src="#bb030"></a-asset-item>
                 <a-asset-item id="glbplate3" src="#"></a-asset-item>
 
                 <a-asset-item id="cadboxx" src="https://cdn.glitch.global/2a3af8bb-e7b2-4e50-8ce2-68e3e8cf4538/planebox-x.glb?v=1686288365491"></a-asset-item>
@@ -1196,7 +1196,11 @@
 
             <a-entity id="gg1" gltf-model="#cadboxx-floor" position="0 0 0" rotation="0 0 0" static-body visible="false"></a-entity>
             <a-entity id="gg2" gltf-model="#floor-t" position="0 0 0" rotation="0 0 0" static-body visible="true"></a-entity>
-
+            
+            <a-entity id="gg3" mixin="rotzz" gltf-model="#bb030" position="0 0 0" rotation="0 0 0" static-body visible="true"></a-entity>
+            <a-entity id="gg4"  mixin="rotxx"  gltf-model="#bb030" position="0 4 0" rotation="0 0 0" dynamic-body visible="true"></a-entity>
+            <a-entity id="gg5"  mixin="rotxx"  gltf-model="#bb030" position="0 4 0" rotation="0 0 0" dynamic-body visible="true"></a-entity>
+                
 
             <!--templates-->
             <!--crankshaft
