--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
                 <button class="clickable" onclick="myNavh3()">HELP 3</button>
                 <button class="clickable" onclick="myNavh4()"> HELP 4</button>
                 <button class="clickable" onclick="myNavh5()">HELP 5</button>
+                <button class="clickable" onclick="myNavh6()">HELP 6</button>
                 <button class="clickable" onclick="closeAllNav()">CLOSE</button>
                 
             </div>
@@ -385,6 +386,7 @@
                 <button class="clickable" onclick="myNavh3()">HELP 3</button>
                 <button class="clickable" onclick="myNavh4()"> HELP 4</button>
                 <button class="clickable" onclick="myNavh5()">HELP 5</button>
+                <button class="clickable" onclick="myNavh6()">HELP 6</button>
                 <button class="clickable" onclick="closeAllNav()">CLOSE</button>
                 
             </div>
