--- a/index.html
+++ b/index.html
@@ -1669,7 +1669,15 @@
                 document.getElementById("myNavh01").style.display = "none";
 
             }
+            function myNavh6() {
+                document.getElementById("myNavh06").style.display = "block";
+                document.getElementById("myNavh05").style.display = "none";
+                document.getElementById("myNavh02").style.display = "none";
+                document.getElementById("myNavh03").style.display = "none";
+                document.getElementById("myNavh04").style.display = "none";
+                document.getElementById("myNavh01").style.display = "none";
 
+            }
         
         
     </script>
