--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </style>
 </head>
 <body>
-
+<div display="inline-block" >
 <div id="mySidenav" class="sidenav">
   <a href="#" id="about">About</a>
   <a href="#" id="blog">Blog</a>
@@ -60,7 +60,7 @@
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
 </div>
-   
+</div>div>
 </body>
 </html> 
 
