--- a/index.html
+++ b/index.html
@@ -1849,10 +1849,9 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">CADBOXX</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" href="#">
+    <img src="img/cad-boxx.png" width="30" height="30" alt="">
+  </a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <li class="nav-item dropdown">
