--- a/ddmenu-template.html
+++ b/ddmenu-template.html
@@ -1855,6 +1855,9 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+             <a class="navbar-brand" href="#">
+                <img src="img/cad-boxx.png" width="30" height="30" alt="">
+              </a>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     EXPORT
