--- a/index.html
+++ b/index.html
@@ -1888,7 +1888,30 @@
     Action
   </button>
   <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Action
+        <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    views
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" onclick="window.open("https://hubs.mozilla.com", "_blank");">Hubs</a>
+                    <a class="dropdown-item" onclick="window.open("https://spoke.mozilla.com", "_blank");">Spoke</a>
+                    <a class="dropdown-item" onclick="window.open("https://sketchfab.com", "_blank");">Sketchfab</a>
+
+                    <a class="dropdown-item" onclick="cmm2()">Cam2</a>
+                    <a class="dropdown-item" onclick="cmm3()">Cam3</a>
+                    <a class="dropdown-item" onclick="cmm4()">Cam4</a>
+                    <a class="dropdown-item" onclick="cmm5()">Cam5</a>
+                    <a class="dropdown-item" onclick="cmm6()">Cam6</a>
+                    <a class="dropdown-item" onclick="cmm7()">Cam7</a>
+                    <a class="dropdown-item" onclick="cmm8()">Cam8</a>
+                    <a class="dropdown-item" onclick="cmm9()">Cam9</a>
+                    <a class="dropdown-item" onclick="cmm10()">Cam10</a>
+
+
+                </div>
+            </li>
+    </a></li>
     <li><a class="dropdown-item" href="#">Another action</a></li>
     <li><a class="dropdown-item" href="#">Something else here</a></li>
     <li><hr class="dropdown-divider" /></li>
