--- a/index.html
+++ b/index.html
@@ -1243,8 +1243,8 @@
 
             <!--end spinner-->
             
-            <!--crankshaft
-            <a-entity id="rotorxx" position="-17.5 0 0" rotation="0 0 0" scale="1 1 1">
+            <!--crankshaft-->
+            <a-entity id="rotorxx" position="17.5 0 0" rotation="0 0 0" scale="1 1 1">
 
                 <a-entity id="flywheelx" gltf-model="#ccylx" material="wireframe:false" position="0 0 0" rotation="0 0 0" scale="10 10 10"
                           animation__rotation__xx="property: rotation; dir: forward; dur: 5000;
